--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="image"></div>
+  <div class="container">
+    <div class="img">
+      <img id="img" src="https://cdn2.thecatapi.com/images/bkq.jpg" alt="">
+    </div>
+    
+    <div class="btn"> 
+      <button id="btn" onclick="changeAttribute()">Change image
+      </button>
+    </div>
+  </div>
+
+
   <script src="app.js"></script>
 </body>
 
