--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -14,8 +14,8 @@
     <div class="img">
       <img id="img" src="https://cdn2.thecatapi.com/images/bkq.jpg" alt="">
     </div>
-    
-    <div class="btn"> 
+
+    <div class="btn">
       <button id="btn" onclick="changeAttribute()">Change image
       </button>
     </div>
